--- a/purchase_request_site/templates/dashboard.html
+++ b/purchase_request_site/templates/dashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purchase Request Dashboard</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-  </head>
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
+</head>
   <body class="dashboard-body">
       <div class="dashboard-container">
         <div class="dashboard-header">
