--- a/purchase_request_site/templates/dashboard.html
+++ b/purchase_request_site/templates/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purchase Request Dashboard</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body class="dashboard-body">
@@ -291,7 +291,7 @@
         </form>
     </div>
 
-    <script src="{{ url_for('static', path='/js/dashboard.js') }}"></script>
+    <script src="/static/js/dashboard.js"></script>
 </body>
 
 </html>
