--- a/purchase_request_site/templates/login.html
+++ b/purchase_request_site/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Purchase Request Site</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body class="login-body">
