--- a/purchase_request_site/templates/login.html
+++ b/purchase_request_site/templates/login.html
@@ -39,7 +39,7 @@
         </form>
 
         <div class="login-footer">
-            <p>Contact Raj if you would like access to the purchase request site.</p>
+            <p>Contact Raj on teams if you would like access to the purchase request site.</p>
         </div>
     </div>
 </body>
